First pass on Blazor UI to visualize metrics

--- a/System/src/MonitrixSystem.csproj
+++ b/System/src/MonitrixSystem.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>disable</ImplicitUsings>
     <DefaultNamespace>Monitrix.System</DefaultNamespace>
     <AssemblyName>Monitrix.System</AssemblyName>
-    <RootNamespace>Monitrix.System </RootNamespace>
+    <RootNamespace>Monitrix.SystemMonitoring</RootNamespace>
     <Company>Monitrix</Company>
     <Product>Monitrix</Product>
   </PropertyGroup>
