--- a/Web/Monitrix/src/appsettings.json
+++ b/Web/Monitrix/src/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SystemMonitoringEndpoint": {
+    "BaseUrl": "http://hawk.grenangen.se:8303"
+  }
 }
